--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
               'fade-in': 'fadeIn 0.3s ease-out',
               'slide-up': 'slideUp 0.4s cubic-bezier(0.16, 1, 0.3, 1)',
               'slide-in-right': 'slideInRight 0.5s cubic-bezier(0.16, 1, 0.3, 1)',
+              'marquee': 'marquee 20s linear infinite',
             },
             keyframes: {
               pop: {
@@ -52,6 +53,10 @@
               slideInRight: {
                 '0%': { transform: 'translateX(100%)', opacity: '0' },
                 '100%': { transform: 'translateX(0)', opacity: '1' },
+              },
+              marquee: {
+                '0%': { transform: 'translateX(0%)' },
+                '100%': { transform: 'translateX(-50%)' },
               }
             },
           },
